# streamlit-component-template

./: README.md  pyproject.toml  streamlit_app.py
streamlit_component/: __init__.py  component.py
