[tool.poetry]
name = "streamlit-component"
version = "0.0.1"
description = "Template component for Streamlit"
authors = ["Yi Zhang <yizhang.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://st-component.streamlit.app"
repository = "https://github.com/imyizhang/streamlit-component"
documentation = "https://github.com/imyizhang/streamlit-component#documentation"

[tool.poetry.dependencies]
python = "^3.7, !=3.9.7"
streamlit = "^1.14.0"
streamlit-space = "^0.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
